Do not use Doppler.js just yet

--- a/sweetercat/templates/template.html
+++ b/sweetercat/templates/template.html
@@ -66,7 +66,7 @@
         });
     </script>
 
-    <script src="static/js/doppler.min.js"></script>
+    <!-- <script src="static/js/doppler.min.js"></script>
     <script>
       window.addEventListener('load', function() {
         console.log('callback - doppler.js config loaded');
@@ -83,7 +83,7 @@
           }
         });
       });
-    </script>
+    </script> -->
 
   </body>
 </html>
