Sort according to last update by default

--- a/sweetercat/templates/main.html
+++ b/sweetercat/templates/main.html
@@ -40,7 +40,8 @@
       deferRender: true,
       scrollY: 500,
       scrollCollapse: true,
-      scroller: true
+      scroller: true,
+      "order": [[ 23, "desc" ]]
     });
   });
 </script>
