Make columns sortable and remove unused code/update test

--- a/sweetercat/templates/main.html
+++ b/sweetercat/templates/main.html
@@ -11,23 +11,23 @@
           "{{ row['HD'] }}",
           "{{ row['RA'] }}",
           "{{ row['dec'] }}",
-          "{{ row['Vmag'] }}",
-          "{{ row['Vmagerr'] }}",
-          "{{ row['par'] }}",
-          "{{ row['parerr'] }}",
+          parseFloat("{{ row['Vmag'] }}"),
+          parseFloat("{{ row['Vmagerr'] }}"),
+          parseFloat("{{ row['par'] }}"),
+          parseFloat("{{ row['parerr'] }}"),
           "{{ row['source'] }}",
-          {{ row['teff'] }},
-          {{ row['tefferr'] }},
-          "{{ row['logg'] }}",
-          "{{ row['loggerr'] }}",
-          "{{ row['logglc'] }}",
-          "{{ row['logglcerr'] }}",
-          "{{ row['vt'] }}",
-          "{{ row['vterr'] }}",
-          "{{ row['feh'] }}",
-          "{{ row['feherr'] }}",
-          "{{ row['mass'] }}",
-          "{{ row['masserr'] }}",
+          parseInt("{{ row['teff'] }}"),
+          parseInt("{{ row['tefferr'] }}"),
+          parseFloat("{{ row['logg'] }}"),
+          parseFloat("{{ row['loggerr'] }}"),
+          parseFloat("{{ row['logglc'] }}"),
+          parseFloat("{{ row['logglcerr'] }}"),
+          parseFloat("{{ row['vt'] }}"),
+          parseFloat("{{ row['vterr'] }}"),
+          parseFloat("{{ row['feh'] }}"),
+          parseFloat("{{ row['feherr'] }}"),
+          parseFloat("{{ row['mass'] }}"),
+          parseFloat("{{ row['masserr'] }}"),
           unescape('{{ row['alink']|safe }}'),
           "{{ row['flag'] }}",
           "{{ row['updated'] }}",
