--- a/sweetercat/templates/template.html
+++ b/sweetercat/templates/template.html
@@ -23,7 +23,7 @@
     <div id="particles">
       <div id="pnavbar">
         <a class="ptext navbar-brand" href="/"><span class="glyphicon glyphicon-home"></span> SWEETer-Cat</a>
-        <a class="ptext navbar-text" href="/mpld3/"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Linked plot</a>
+        <a class="ptext navbar-text" href="/linked/"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Linked plot</a>
         <a class="ptext navbar-text" href="/plot/"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> SC Plot</a>
         <a class="ptext navbar-text" href="/plot-exo/"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> SC+exoplanet plot</a>
         <a class="ptext navbar-text" href="/publications/"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Publications</a>
