--- a/sweetercat/templates/main.html
+++ b/sweetercat/templates/main.html
@@ -1,6 +1,8 @@
 {% extends "template.html" %}
 
 {% block body %}
+<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/scroller/1.4.3/js/dataTables.scroller.min.js "></script>
 
 <script type="text/javascript">
   $(document).ready(function() {
