--- a/sweetercat/templates/template.html
+++ b/sweetercat/templates/template.html
@@ -51,9 +51,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script type="text/javascript">
-      particlesJS.load('particles', "{{ url_for('static', filename='particles.json') }}", function() {
-        console.log('callback - particles.js config loaded');
-        });
+      particlesJS.load('particles', "{{ url_for('static', filename='particles.json') }}", function() {});
     </script>
 
   </body>
