'hight' -> 'height' should fix #143

--- a/sweetercat/templates/template.html
+++ b/sweetercat/templates/template.html
@@ -31,7 +31,7 @@
     <hr>
 
 
-    <div class="container-fluid" style="min-hight:100%">
+    <div class="container-fluid" style="min-height:100%">
       {% with messages = get_flashed_messages() %}
         {% if messages %}
           {% for message in messages %}
